# WeatherApp

./: .gitignore  CMakeLists.txt  README.md
src/headers/: application.hpp  client.hpp  network.hpp
src/sources/: application.cpp  client.cpp  network.cpp
